# i18n

./: .gitignore  Cargo.toml  README.md  crowdin.yml  index.ts  package.json
locales/en/: admin.json  auth.json  catalog.json  common.json  discovery.json  email.json  errors.json  insights.json  library.json  manager.json  marketing.json  player.json  playlists.json  search.json  settings.json  social.json
locales/en-GB/: common.json
locales/es/: common.json  email.json  errors.json  player.json
src/: lib.rs
